--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "name": "Nabil",
     "email": "nabil.tharwat@outlook.com"
   },
-  "license": "MIT",
+	"license": "MIT",
   "config": {
     "forge": {
       "packagerConfig": {},
@@ -45,18 +45,18 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
-    "htm": "^3.0.4",
-    "linkifyjs": "^2.1.9",
-    "preact": "^10.5.11"
+    "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.54",
+		"@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "11.2.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+		"htm": "^3.0.4",
+		"linkifyjs": "^2.1.9",
+		"preact": "^10.5.11"
   }
 }
