--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+		"htm": "^3.0.4",
+		"linkifyjs": "^2.1.9",
+		"preact": "^10.5.11"
   },
   "devDependencies": {
 		"@electron-forge/cli": "^6.0.0-beta.54",
@@ -54,9 +57,6 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "11.2.0",
-    "prettier": "^2.2.1",
-		"htm": "^3.0.4",
-		"linkifyjs": "^2.1.9",
-		"preact": "^10.5.11"
+    "prettier": "^2.2.1"
   }
 }
