--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "iamkacperwasik",
+      "name": "Kacper Wąsik",
+      "avatar_url": "https://avatars.githubusercontent.com/u/57839948?v=4",
+      "profile": "https://github.com/iamkacperwasik",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
