--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clippy",
   "productName": "Clippy",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Clippy is a minimal clipboard history log made with Electron.js!",
   "main": "src/index.js",
   "scripts": {
@@ -10,6 +10,9 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "commit": "cz",
+		"postinstall": "electron-builder install-app-deps",
+    "builder:build": "electron-builder --mac --windows --linux",
+    "builder:release": "electron-builder --mac --windows --linux --publish always",
     "release": "standard-version",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
@@ -20,6 +23,22 @@
     "email": "nabil.tharwat@outlook.com"
   },
   "license": "GPL-3.0-or-later",
+  "build": {
+    "appId": "com.kl13nt.clippy",
+    "productName": "Clippy",
+    "mac": {
+      "category": "public.app-category.lifestyle"
+    },
+    "dmg": {
+      "icon": false
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ],
+      "category": "Utilities"
+    }
+  },
   "config": {
     "forge": {
       "packagerConfig": {},
@@ -74,6 +93,7 @@
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "3.3.0",
     "electron": "11.2.0",
+    "electron-builder": "^22.9.1",
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
     "standard-version": "^9.1.0"
