--- a/.github/workflows/release_manual.yml
+++ b/.github/workflows/release_manual.yml
@@ -3,12 +3,37 @@ name: release_manual
 on: workflow_dispatch
 
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
+  release_linux:
+    runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v1
+
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10
+
+      - name: install deb packages
+        run: sudo apt-get install fakeroot dpkg
+
+      - name: install rpm packages
+        run: sudo apt-get install rpm
+
+      - name: Build/release Electron app
+        uses: kl13nt/action-electron-forge@master
+        with:
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
+          github_token: ${{ secrets.github_token }}
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+
+  release_windows:
+    runs-on: windows-latest
 
     steps:
       - name: Check out Git repository
@@ -20,7 +45,7 @@ jobs:
           node-version: 10
 
       - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
+        uses: kl13nt/action-electron-forge@master
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
