--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clippy",
-  "productName": "Clippy",
+  "productName": "clippy",
   "version": "1.2.0",
   "description": "Clippy is a minimal clipboard history log made with Electron.js!",
   "main": "src/index.js",
@@ -10,9 +10,6 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "commit": "cz",
-    "postinstall": "electron-builder install-app-deps",
-    "builder:build": "electron-builder --mac --windows --linux",
-    "builder:release": "electron-builder --mac --windows --linux --publish always",
     "release": "standard-version",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
@@ -40,31 +37,7 @@
     }
   },
   "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "clippy"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    },
+    "forge": "./forge.config.js",
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
@@ -89,11 +62,11 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
+    "@electron-forge/publisher-github": "^6.0.0-beta.54",
     "all-contributors-cli": "^6.19.0",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "3.3.0",
     "electron": "11.2.0",
-    "electron-builder": "^22.9.1",
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
     "standard-version": "^9.1.0"
