--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "commit": "cz",
+    "precommmit": "lint && pretty && test",
     "release": "standard-version",
     "contributors:add": "all-contributors add",
-    "contributors:generate": "all-contributors generate"
+    "contributors:generate": "all-contributors generate",
+    "lint": "eslint --ext .js,.ts ./src --config .eslintrc.js --fix",
+    "pretty": "prettier --write \"./**/*.{js,jsx,json}\"",
+    "test": "jest --colors --expand --logHeapUsage --config jest.config.js --verbose --coverage --passWithNoTests"
   },
   "keywords": [],
   "author": {
@@ -55,6 +59,12 @@
     "preact": "^10.5.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/eslint-parser": "^7.12.13",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-pipeline-operator": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "@babel/preset-env": "^7.12.13",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@electron-forge/cli": "^6.0.0-beta.54",
@@ -67,7 +77,16 @@
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "3.3.0",
     "electron": "11.2.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "standard-version": "^9.1.0"
   }
