chore: added codecov workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,34 @@ on:
     tags:
       - "*"
 
-jobs:
+jobs:  
+  codecov:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v1
+
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      
+      - name: install dependencies
+        run: npm install
+
+      - name: ci lint && test
+        run: npm run lint && npm run test --ci
+      
+      - name: send coverage reports to codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
+          directory: ./docs/coverage 
+
+    
   release_linux:
     runs-on: ubuntu-latest
 
@@ -23,7 +50,7 @@ jobs:
 
       - name: install rpm packages
         run: sudo apt-get install rpm
-
+      
       - name: Build/release Electron app
         uses: kl13nt/action-electron-forge@master
         with:
