--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "npm run precommit && commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "dependencies": {
@@ -87,8 +87,6 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.2.2",
     "commitizen": "^4.2.3",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.2",
     "cz-conventional-changelog": "3.3.0",
     "electron": "11.2.0",
     "eslint": "^7.19.0",
@@ -101,7 +99,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
-    "file-loader": "^6.2.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
