--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "htm": "^3.0.4",
     "linkifyjs": "^2.1.9",
     "nanoid": "^3.1.20",
-    "preact": "^10.5.12"
+    "preact": "^10.5.12",
+    "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "@axe-core/react": "^4.1.1",
