--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     }
   },
   "dependencies": {
+    "@simonwep/selection-js": "^2.1.0",
     "electron-is-dev": "^1.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "htm": "^3.0.4",
